--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "escodegen": "^1.11.0",
         "esprima": "^4.0.0",
         "jquery": "^3.3.1"
     },
@@ -28,6 +29,7 @@
         "cross-env": "^5.2.0",
         "eslint": "^5.0.1",
         "istanbul-instrumenter-loader": "^3.0.1",
+        "mark.js": "^8.11.1",
         "mocha": "^5.2.0",
         "mocha-webpack": "^2.0.0-beta.0",
         "nyc": "^12.0.2",
